Fixed Toggle Switch for Japan

--- a/index.html
+++ b/index.html
@@ -184,11 +184,13 @@
             if (isDaytime1) {
 
                 $("#clock1").css({ backgroundColor: 'white' });
+                $("#clock1").css({ color: 'black' });
 
             }
             else {
 
-                $("#clock1").css({ backgroundColor: 'black' })
+                $("#clock1").css({ backgroundColor: 'black' });
+                $("#clock1").css({ color: 'white' });
             }
 
             // if (isDaytime1) {
@@ -260,11 +262,13 @@
             if (isDaytime2) {
 
                 $("#clock2").css({ backgroundColor: 'white' });
+                $("#clock2").css({ color: 'black' });
 
             }
             else {
 
-                $("#clock2").css({ backgroundColor: 'black' })
+                $("#clock2").css({ backgroundColor: 'black' });
+                $("#clock2").css({ color: 'white' });
             }
 
         }
